# tildagon-rs

./: .gitignore  .mdl_style.rb  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix  treefmt.toml  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.helix/: config.toml
examples/demo/: Cargo.toml  README.md
examples/demo-2024/: Cargo.toml
examples/demo-2024/.cargo/: config.toml
examples/demo-2024/src/: main.rs
examples/demo-no-top-board/: Cargo.toml  README.md
examples/demo-no-top-board/src/: main.rs
examples/demo/src/: main.rs
examples/ethernet-w5500/: Cargo.toml  README.md
examples/ethernet-w5500/src/: display.rs  exclusive_device.rs  fake_pin.rs  leds.rs  main.rs
examples/i2c-scan/: Cargo.toml  README.md
examples/i2c-scan/src/: main.rs
examples/imu/: Cargo.toml
examples/imu-2024/: Cargo.toml  README.md
examples/imu-2024/src/: main.rs
examples/imu/src/: main.rs
examples/sdcard/: Cargo.toml  README.md
examples/sdcard/src/: exclusive_device.rs  main.rs
examples/slow-io/: Cargo.toml
examples/slow-io/src/: main.rs
src/: button_collection.rs  buttons.rs  display.rs  hexpansion_slots.rs  imu.rs  led_power.rs  leds.rs  lib.rs  pins.rs  power.rs  resources.rs  system.rs  system_interrupt.rs  usb.rs
src/eeprom/: detect.rs  device.rs  mod.rs
src/front/: leds.rs  mod.rs
src/front/variants/: mod.rs  none.rs
src/front/variants/emf2024/: buttons.rs  gc9a01.rs  leds.rs  mod.rs
src/hexpansions/: eeprom.rs  mod.rs  ports.rs
src/i2c/: blocking_wrapper.rs  mod.rs  scan.rs  tca9548a.rs
src/imu/: mod.rs
src/imu/bmi2/: README.md  bmi2.rs  interface.rs  mod.rs  registers.rs  types.rs
src/pins/: assignment.rs  aw9523b.rs  control.rs  input.rs  input_registers.rs  led.rs  mod.rs  output.rs  pin.rs
