[package]
name = "tildagon"
description = "Board support crate for the Electromagnetic Field Tildagon badge"
license-file = "LICENSE"
homepage = "https://github.com/DanNixon/tildagon-rs"
repository = "https://github.com/DanNixon/tildagon-rs"
version = "0.0.1"
edition = "2024"

[features]
top-board-none = []
top-board-2024 = []

[dependencies]
defmt = "1.0.1"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", default-features = false, features = ["async", "defmt-03"] }
esp-hal = { version = "=1.0.0-beta.1", features = ["defmt", "esp32s3", "unstable"] }
esp-hal-smartled = { version = "0.15.0", features = ["defmt", "esp32s3"] }
getset = "0.1.6"
heapless = { version = "0.8.0", features = ["defmt-03"] }
mipidsi = { version = "0.9.0", default-features = false }
smart-leds = "0.4.0"
