[package]
name = "tildagon"
description = "Board support crate for the Electromagnetic Field Tildagon badge"
license-file = "LICENSE"
homepage = "https://github.com/DanNixon/tildagon-rs"
repository = "https://github.com/DanNixon/tildagon-rs"
version = "0.0.7"
edition = "2024"

[lib]
path = "src/lib.rs"
test = false
bench = false

[features]
top-board-none = []
top-board-2024 = []

[dependencies]
bmi2 = "0.1.2"
bq25895 = "0.0.3"
defmt = "1.0.1"
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embedded-aw9523 = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", default-features = false, features = ["async", "defmt-03"] }
esp-hal = { version = "=1.0.0", features = ["defmt", "esp32s3", "unstable"] }
esp-hal-smartled = { version = "0.17.0", features = ["defmt", "esp32s3"] }
fixedvec = "0.2.4"
getset = "0.1.6"
heapless = { version = "0.9.2", features = ["defmt"] }
mipidsi = { version = "0.10.0", default-features = false }
smart-leds = "0.4.0"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
