[package]
name = "tildagon-ethernet-w5500"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tildagon-ethernet-w5500"
test = false
bench = false

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["defmt"] }
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["defmt", "medium-ethernet", "dns", "tcp", "dhcpv4"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = [] }
embedded-io-async = "0.7.0"
embedded-text = "0.7.2"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy"] }
heapless = { version = "0.9.3", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
smart-leds = "0.4.0"
sntpc = { version = "0.9.0", features = ["defmt"] }
sntpc-net-embassy = { version = "0.9.0", default-features = false, features = ["defmt"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
tildagon = { path = "../../", features = ["top-board-2024"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
