[package]
name = "tildagon-i2c-scan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tildagon-i2c-scan"
test = false
bench = false

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
tildagon = { path = "../../", features = ["top-board-none"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
